<resources>
    <string name="app_name">View</string>
    <string name="umum">Produk Moisture dan Shoothing Gel yang mengandung 92% ekstrak lidah buaya yang diproduksi di Korea.</string>
    <string name="tekstur">Gel</string>
    <string name="berat">300gram/250gram</string>
    <string name="Kemasan">Jar Plastik Tebal</string>

    <string name="pemakaian">Body Care / Eye Mask / Sunburn Mask </string>
</resources>
